# GomokuGen

./: #Main.py#  .#Main.py  ANN.py  ArgmaxActionSelector.py  Board.py  CMakeLists.txt  Genetic.py  GomokuEnv.py  Main.py  Makefile  NeuralNetwork.py  README.md  ann.model  build.cmd  compile.py  game.py  generateFile.cpp  gomoku.model  tensorflowToData.py  test.dl  train.py
Learner/: ANN.py  ReplayBuffer.py  ann.model  tensorflowToData.py  train.py
Learner/logs/: events.out.tfevents.1540199952.florian-HP-EliteBook-840-G3  events.out.tfevents.1540283748.florian-HP-EliteBook-840-G3
Learner/save/: model.ckpt.data-00000-of-00001  model.ckpt.index
Release/: ann.model
inc/: AGameCommunication.hpp  GameManager.hpp
inc/NeuralNetwork/: ANNPlayer.hpp  ANNPlayer.hpp~  Convolution2D.hpp  Linear.hpp
logs/: events.out.tfevents.1539878453.florian-HP-EliteBook-840-G3
save/: model.ckpt.data-00000-of-00001  model.ckpt.index
src/: Main.cpp
